<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">karigai</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_main_activity2">MainActivity2</string>
    <string name="title_activity_main_activity3">MainActivity3</string>
    <string name="title_activity_main_activity4">MainActivity4</string>
    <string name="title_activity_main_activity5">MainActivity5</string>
    <string name="title_activity_main_activity7">MainActivity7</string>
    <string name="title_activity_main_activity8">MainActivity8</string>
    <string name="Login">Login</string>
   <string name="Karigai_Tailors">Karigai Tailors</string>
   <string name="Enter_Name">Enter Name</string>
   <string name="Password">Password</string>
   <string name="Forget">Forget Password..?</string>
   <string name="SignIn">SignIn</string>
   <string name="SignUp">SignUp</string>
   <string name="if_like">If You Like It,Wear It.</string>
   <string name="check">Check Your Order</string>
   <string name="place">Place New Order</string>
   <string name="Register_Form">Register Form</string>
   <string name="New_Password">New Password</string>
   <string name="Address">Address</string>
   <string name="Phone_Number">Phone Number</string>
   <string name="Age">Age</string>
   <string name="Name">Name</string>
   <string name="UserName">UserName</string>
   <string name="Re_enter_Password">Re-enter password</string>
   <string name="Confirm">Confirm</string>
   <string name="dots">..........................................................</string>
   <string name="BLOUSE">BLOUSE</string>
   <string name="shoulder">shoulder</string>
   <string name="chest">chest</string>
   <string name="front_cut">front cut</string>
   <string name="neck">neck</string>
   <string name="armhole">armhole</string>
   <string name="back_rise">back rise</string>
   <string name="CHUDITHAR">CHUDITHAR</string>
   <string name="Waist_size">Waist size</string>
   <string name="size">size</string>
   <string name="top_length">top length</string>
   <string name="shirt_length">shirt length</string>
   <string name="CHUDI_BOTTOM">CHUDI BOTTOM</string>
   <string name="leg_open">leg open</string>
   <string name="front_rise">front rise</string>
   <string name="center">center</string>
   <string name="proceed">proceed</string>
   <string name="advertise">YOUR  ORDER HAS BEEN CONFIRMED....</string>
   <string name="material">your material is dispatched and our tailors are ready to work.......</string>
   <string name="order">your order successfully completed.......</string>
   <string name="order2">work in progress and approaching to complete your design......</string>
   <string name="order3">ORDER STATUS</string>
   <string name="order4">your order has been placed successfully......</string>
   <string name="NAME">NAME</string>
   <string name="TRACK_ID">TRACK ID</string>
   <string name="DRESS_COUNT">DRESS COUNT</string>
   <string name="TOTAL_AMOUNT">TOTAL AMOUNT</string>
   <string name="PAID_AMOUNT">PAID AMOUNT</string>
   <string name="BALANCE_AMOUNT">BALANCE AMOUNT</string>
   <string name="PAID">PAID</string>
   <string name="amount">amount</string>
   <string name="Count">Count</string>
   <string name="With_lining">With lining</string>
   <string name="Lining_cloth">Lining cloth</string>
   <string name="Needed">Needed</string>
   <string name="Not_Needed">Not Needed</string>
   <string name="Without_lining">Without lining</string>
   <string name="ORDER_DETAIL">ORDER DETAIL</string>
   <string name="Chudidhar">chudidhar</string>
   <string name="Bill">Bill</string>
   <string name="Payment">Payment</string>
   <string name="Blouse1">Blouse</string>
   <string name="Chudidhar1">chudidhar</string>
   <string name="Blouse">Blouse</string>
   <string name="dots1">..................................</string>

   
</resources>
