<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        
        android:layout_centerHorizontal="true"
        android:text="@string/Karigai_Tailors"
        android:textColor="#ff7aff24"
        android:textSize="35sp" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView"
        android:layout_below="@+id/textView"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="20dp"
        android:text="@string/Register_Form"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/editText6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/editText4"
        android:layout_below="@+id/editText5"
        android:ems="10"
        android:hint="@string/New_Password"
        android:inputType="textPassword"
        android:textColorHint="#ffff25e6" />

    <EditText
        android:id="@+id/editText4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText3"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/Address"
        android:inputType="textPostalAddress"
        android:textColorHint="#ffff25e6" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/editText3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText2"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/Phone_Number"
        android:inputType="number|numberPassword"
        android:textColorHint="#ffff25e6" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editText3"
        android:layout_below="@+id/editText1"
        android:ems="10"
        android:hint="@string/Age"
        android:textColorHint="#ffff25e6" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editText2"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/Name"
        android:textColorHint="#ffff25e6" />

    <EditText
        android:id="@+id/editText5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editText3"
        android:layout_below="@+id/editText4"
        android:ems="10"
        android:hint="@string/UserName"
        android:inputType="textPersonName"
        android:textColorHint="#ffff25e6" />

    <EditText
        android:id="@+id/editText7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editText6"
        android:layout_below="@+id/editText6"
        android:ems="10"
        android:hint="@string/Re_enter_Password"
        android:inputType="textPassword"
        android:textColorHint="#ffff25e6" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText7"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/Confirm" />

</RelativeLayout>