<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/textView3"
        android:layout_width="78dp"
        android:layout_height="31dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="18dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="186dp"
        android:text="@string/Count"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="235dp"
        android:layout_height="33dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="11dp"
        android:layout_marginStart="11dp"
        android:layout_marginTop="241dp"
        android:text="@string/With_lining"
        android:textColor="#ffff25e6"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="238dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView"
        android:layout_marginStart="11dp"
        android:text="@string/Lining_cloth"
        android:textColor="#ffff25e6"
        android:textSize="24sp" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="128dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView2"
        android:layout_marginStart="17dp"
        android:text="@string/Needed"
        android:textSize="18sp" />

    <CheckBox
        android:id="@+id/CheckBox01"
        android:layout_width="128dp"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/checkBox"
        android:layout_marginStart="17dp"
        android:text="@string/Not_Needed"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="237dp"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/textView5"
        android:layout_below="@+id/CheckBox01"
        android:layout_marginStart="10dp"
        android:text="@string/Without_lining"
        android:textColor="#ffff25e6"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="348dp"
        android:layout_height="33dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="13dp"
        android:layout_marginTop="22dp"
        android:text="@string/ORDER_DETAIL"
        android:textColor="#ff7aff24"
        android:textSize="30sp" />
    
    <TextView
        android:id="@+id/TextView01"
        android:layout_width="78dp"
        android:layout_height="31dp"
        android:layout_alignLeft="@+id/textView8"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView5"
        android:layout_marginStart="18dp"
        android:layout_marginTop="17dp"
        android:text="@string/Count"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView3"
        android:layout_toLeftOf="@+id/editText3"
        android:layout_toRightOf="@+id/textView3"
        android:ems="10"
        android:hint="@string/Blouse1" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView3"
        android:layout_alignBottom="@+id/textView3"
        android:layout_alignLeft="@+id/editText2"
        android:hint="@string/Chudidhar1"
        android:ems="10" />

    <EditText
        android:id="@+id/EditText02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/TextView01"
        android:layout_alignBottom="@+id/TextView01"
        android:layout_alignLeft="@+id/editText2"
        android:layout_alignParentRight="true"
        android:ems="10"
       android:hint="@string/Chudidhar"/>

    <EditText
        android:id="@+id/EditText01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/TextView01"
        android:layout_alignBottom="@+id/TextView01"
        android:layout_toLeftOf="@+id/EditText02"
        android:layout_toRightOf="@+id/TextView01"
        android:ems="10"
        android:hint="@string/Blouse"/>

    <TextView
        android:id="@+id/textView11"
        android:layout_width="107dp"
        android:layout_height="38dp"
        android:layout_above="@+id/button"
        android:layout_alignLeft="@+id/button"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="24dp"
        android:layout_marginEnd="157dp"
        android:layout_toLeftOf="@+id/editText2"
        android:text="@string/Bill"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="106dp"
        android:layout_height="31dp"
        android:layout_alignBaseline="@+id/textView11"
        android:layout_alignBottom="@+id/textView11"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="14dp"
        android:layout_marginLeft="31dp"
        android:layout_toRightOf="@+id/checkBox"
        android:ems="10"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="348dp"
        android:layout_height="33dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="13dp"
        android:layout_marginTop="30dp"
        android:text="@string/dots"
        android:textColor="#ff7aff24"
        android:textSize="30sp" />

    <Button
        android:id="@+id/button"
        android:layout_width="148dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="118dp"
        android:text="@string/Payment"
        android:textSize="18sp" />

</RelativeLayout>