<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >
    
    
   <Button
       android:id="@+id/button"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_alignBottom="@+id/button2"
       android:layout_alignLeft="@+id/textView2"
       android:layout_toStartOf="@+id/textview"
       android:text="@string/SignIn" />

   <Button
       android:id="@+id/button2"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_below="@+id/textView2"
       android:layout_marginTop="58dp"
       android:layout_toEndOf="@+id/textview"
       android:text="@string/SignUp" />

   <EditText
       android:id="@+id/editText2"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_alignEnd="@+id/editText"
       android:layout_alignLeft="@+id/editText"
       android:layout_alignParentStart="true"
       android:layout_below="@+id/editText"
       android:layout_marginTop="37dp"
       android:ems="10"
       android:hint="@string/Password"
       android:inputType="textPassword"
       android:textColorHint="#ffff299f" >

       <requestFocus />
   </EditText>

   <TextView
       android:id="@+id/textView2"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_alignLeft="@+id/editText2"
       android:layout_alignParentStart="true"
       android:layout_below="@+id/editText2"
       android:layout_marginTop="47dp"
       android:text="@string/Forget"
       android:textSize="25sp" />

   <TextView
       android:id="@+id/textView"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_alignParentTop="true"
       android:layout_centerHorizontal="true"
       android:text="@string/Karigai_Tailors"
       android:textColor="#ff7aff24"
       android:textSize="35sp" />

   <TextView
       android:id="@+id/textview"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_below="@+id/textView"
       android:layout_centerHorizontal="true"
       android:text="@string/Login"
       android:textSize="35sp" />

   <EditText
       android:id="@+id/editText"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_alignParentEnd="true"
       android:layout_alignParentStart="true"
       android:layout_below="@+id/textview"
       android:layout_centerHorizontal="true"
       android:layout_marginTop="24dp"
       android:ems="10"
       android:focusable="true"
       android:hint="@string/Enter_Name"
       android:textColorHighlight="#ff7eff15"
       android:textColorHint="#ffff25e6" />

</RelativeLayout>
