<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="157dp"
        android:layout_marginEnd="0dp"
        android:layout_marginRight="0dp"
        android:background="?android:attr/listDivider"
        android:visibility="visible" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="381dp"
        android:layout_height="80dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="14dp"
        android:text="@string/advertise"
        android:textSize="30sp" />

    <CheckBox
        android:id="@+id/checkBox2"
        android:layout_width="371dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="41dp"
        android:layout_marginStart="2dp"
        android:checked="true"
        android:text="@string/material"
        android:textSize="18sp" />

    <CheckBox
        android:id="@+id/checkBox4"
        android:layout_width="367dp"
        android:layout_height="45dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/checkBox3"
        android:layout_marginStart="4dp"
        android:layout_marginTop="30dp"
        android:checked="true"
        android:text="@string/order"
        android:textSize="18sp" />

    <CheckBox
        android:id="@+id/checkBox3"
        android:layout_width="368dp"
        android:layout_height="47dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/divider"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="3dp"
        android:checked="true"
        android:text="@string/order2"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="212dp"
        android:layout_height="53dp"
        android:layout_alignBottom="@+id/divider"
        android:layout_alignLeft="@+id/checkBox4"
        android:layout_alignParentStart="true"
        android:layout_marginStart="12dp"
        android:text="@string/order3"
         android:textColor="#ffff25e6"
        android:textSize="24sp" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="369dp"
        android:layout_height="42dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/checkBox4"
        android:layout_marginStart="2dp"
        android:layout_marginTop="22dp"
        android:checked="true"
        android:text="@string/order4"
        android:textSize="18sp" />

</RelativeLayout>
